--- a/app/src/main/res/layout/add_dress_layout.xml
+++ b/app/src/main/res/layout/add_dress_layout.xml
@@ -30,10 +30,10 @@
         app:layout_constraintTop_toBottomOf="@id/cardView"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        />
+        android:scaleType="centerCrop"/>
 
     <View
-        android:id="@+id/view"
+        android:id="@id/view"
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_marginTop="10dp"
