--- a/app/src/main/res/layout/clothual_total_adapter.xml
+++ b/app/src/main/res/layout/clothual_total_adapter.xml
@@ -24,125 +24,136 @@
             android:layout_marginStart="10dp"
             app:layout_constraintStart_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+            android:scaleType="centerCrop"/>
 
 
-        <LinearLayout
-            android:id="@+id/dati"
-            android:layout_width="160dp"
-            android:layout_height="170dp"
+    <LinearLayout
+        android:id="@+id/dati"
+        android:layout_width="160dp"
+        android:layout_height="170dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/delite"
+        app:layout_constraintStart_toEndOf="@id/imageViewAdapterClothual"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/type"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:orientation="vertical"
-            app:layout_constraintStart_toEndOf="@id/imageViewAdapterClothual"
-            app:layout_constraintTop_toTopOf="parent">
+            android:fontFamily="@font/inter_semibold"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="25sp" />
 
-            <TextView
-                android:id="@+id/type"
-                android:layout_marginTop="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:fontFamily="@font/inter_semibold"
-                android:textColor="@color/white"
-                android:textSize="25sp"/>
+        <TextView
+            android:id="@+id/brand"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/inter_semibold"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
 
-            <TextView
-                android:id="@+id/brand"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:fontFamily="@font/inter_semibold"
-                android:textColor="@color/white"
-                android:textSize="20sp"/>
-            <TextView
-                android:id="@+id/template"
-                android:layout_width="match_parent"
-                android:textAlignment="center"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/inter_semibold"
-                android:textColor="@color/white"
-                android:textSize="20sp"/>
-            <TextView
-                android:id="@+id/color"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:textAlignment="center"
-                android:fontFamily="@font/inter_semibold"
-                android:textColor="@color/white"
-                android:textSize="15sp"/>
-            <TextView
-                android:id="@+id/descritpion"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:fontFamily="@font/inter_semibold"
-                android:textColor="@color/white"
-                android:textSize="15sp"/>
-        </LinearLayout>
+        <TextView
+            android:id="@+id/template"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/inter_semibold"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/color"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/inter_semibold"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/descritpion"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/inter_semibold"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="15sp" />
+    </LinearLayout>
 
 
+    <ImageButton
+        android:id="@+id/edit"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="10dp"
+        android:background="@color/backGroundAdapter"
+        android:src="@drawable/edit_48px"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/dati" />
 
-        <ImageButton
-            android:layout_height="30dp"
-            android:id="@+id/edit"
-            android:layout_width="30dp"
-            app:layout_constraintStart_toEndOf="@id/dati"
-            app:layout_constraintTop_toTopOf="@id/dati"
-            android:layout_marginEnd="10dp"
-            android:background="@color/backGroundAdapter"
-            android:src="@drawable/edit_48px"/>
-        <ImageButton
-            android:id="@+id/delite"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            app:layout_constraintStart_toEndOf="@id/dati"
-            app:layout_constraintTop_toBottomOf="@id/edit"
-            android:layout_marginTop="40dp"
-            android:background="@color/backGroundAdapter"
-            android:src="@drawable/delete_48px"
-            android:contentDescription="delete" />
-        <ImageButton
-            android:id="@+id/favorite"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            app:layout_constraintStart_toEndOf="@id/dati"
-            app:layout_constraintBottom_toBottomOf="@id/dati"
-            android:background="@color/backGroundAdapter"
-            android:contentDescription="preferiti" />
+    <ImageButton
+        android:id="@+id/delite"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="40dp"
+        android:background="@color/backGroundAdapter"
+        android:contentDescription="delete"
+        android:src="@drawable/delete_48px"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/edit" />
+
+    <ImageButton
+        android:id="@+id/favorite"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@color/backGroundAdapter"
+        android:contentDescription="preferiti"
+        app:layout_constraintBottom_toBottomOf="@id/dati"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <RelativeLayout
         android:id="@+id/cardViewTotal"
         android:layout_width="220dp"
         android:layout_height="170dp"
-        android:layout_marginStart="85dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:background="@drawable/border_layout_adapter_category"
-        android:visibility="invisible">
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <TextView
+            style="@style/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/removeImage"
-            style="@style/textView"
-            android:layout_marginTop="10dp"
             android:layout_centerHorizontal="true"
-            />
+            android:layout_marginTop="10dp"
+            android:text="@string/removeImage" />
+
         <Button
             android:id="@+id/yesTotal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
             android:layout_centerHorizontal="true"
-            android:text="@string/yes"/>
+            android:layout_marginTop="40dp"
+            android:text="@string/yes" />
+
         <Button
             android:id="@+id/noTotal"
-            android:layout_marginTop="90dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:text="@string/no"/>
+            android:layout_marginTop="90dp"
+            android:text="@string/no" />
 
     </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
