--- a/app/src/main/res/layout-land/clothual_total_adapter.xml
+++ b/app/src/main/res/layout-land/clothual_total_adapter.xml
@@ -18,7 +18,7 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_marginTop="20dp"
-            android:layout_marginStart="60dp"
+            android:layout_marginStart="30dp"
             app:layout_constraintStart_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -31,8 +31,8 @@
             android:layout_height="170dp"
             android:layout_marginTop="10dp"
             android:orientation="vertical"
-            android:layout_marginStart="70dp"
             app:layout_constraintStart_toEndOf="@id/imageViewAdapterClothual"
+            app:layout_constraintEnd_toStartOf="@id/delite"
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
@@ -81,68 +81,71 @@
         </LinearLayout>
 
 
+    <ImageButton
+        android:id="@+id/edit"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@color/backGroundAdapter"
+        android:src="@drawable/edit_48px"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/dati"
+        app:layout_constraintTop_toTopOf="@id/dati" />
 
-        <ImageButton
-            android:layout_height="30dp"
-            android:id="@+id/edit"
-            android:layout_width="30dp"
-            app:layout_constraintStart_toEndOf="@id/dati"
-            app:layout_constraintTop_toTopOf="@id/dati"
-            android:layout_marginEnd="10dp"
-            android:layout_marginStart="40dp"
-            android:background="@color/backGroundAdapter"
-            android:src="@drawable/edit_48px"/>
-        <ImageButton
-            android:id="@+id/delite"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            app:layout_constraintStart_toEndOf="@id/dati"
-            app:layout_constraintTop_toBottomOf="@id/edit"
-            android:layout_marginTop="40dp"
-            android:layout_marginStart="40dp"
-            android:background="@color/backGroundAdapter"
-            android:src="@drawable/delete_48px"/>
-        <ImageButton
-            android:id="@+id/favorite"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginStart="40dp"
-            app:layout_constraintStart_toEndOf="@id/dati"
-            app:layout_constraintBottom_toBottomOf="@id/dati"
-            android:background="@color/backGroundAdapter"/>
+    <ImageButton
+        android:id="@+id/delite"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="40dp"
+        android:background="@color/backGroundAdapter"
+        android:src="@drawable/delete_48px"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/dati"
+        app:layout_constraintTop_toBottomOf="@id/edit" />
+
+    <ImageButton
+        android:id="@+id/favorite"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@color/backGroundAdapter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/dati"
+        app:layout_constraintStart_toEndOf="@id/dati" />
 
     <RelativeLayout
         android:id="@+id/cardViewTotal"
         android:layout_width="220dp"
         android:layout_height="170dp"
-        android:layout_marginStart="240dp"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:background="@drawable/border_layout_adapter_category"
-        android:visibility="invisible">
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <TextView
+            style="@style/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/removeImage"
-            style="@style/textView"
-            android:layout_marginTop="10dp"
             android:layout_centerHorizontal="true"
-            />
+            android:layout_marginTop="10dp"
+            android:text="@string/removeImage" />
+
         <Button
             android:id="@+id/yesTotal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
             android:layout_centerHorizontal="true"
-            android:text="@string/yes"/>
+            android:layout_marginTop="40dp"
+            android:text="@string/yes" />
+
         <Button
             android:id="@+id/noTotal"
-            android:layout_marginTop="90dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:text="@string/no"/>
+            android:layout_marginTop="90dp"
+            android:text="@string/no" />
 
     </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
