--- a/app/src/main/res/layout/add_dress_layout.xml
+++ b/app/src/main/res/layout/add_dress_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,10 +9,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        >
+        android:layout_height="70dp">
 
     <ImageView
         android:id="@+id/clothualAddDress"
@@ -27,10 +24,10 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:contentDescription="TODO"
-        app:layout_constraintTop_toBottomOf="@id/cardView"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:scaleType="centerCrop"/>
+        android:layout_marginTop="10dp"
+        android:scaleType="centerCrop"
+        android:layout_below="@id/cardView"
+        android:layout_centerHorizontal="true"/>
 
     <View
         android:id="@id/view"
@@ -39,26 +36,21 @@
         android:layout_marginTop="10dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="10dp"
+        android:layout_below="@id/imageViewDress"
         android:background="@color/black"
-        app:layout_constraintTop_toBottomOf="@id/imageViewDress"
         tools:layout_editor_absoluteX="0dp" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintTop_toBottomOf="@id/imageViewDress"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="275dp"
+        android:layout_below="@id/view"
         android:scrollbars="none">
-        <!-- MODIFICARE LAYOUT BELOW -->
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_marginEnd="20dp">
 
             <Spinner
@@ -93,6 +85,7 @@
                     android:hint="@string/brand"
                     android:inputType="text"
                     android:maxLength="20"
+                    android:textSize="18sp"
                     android:textStyle="bold|italic"
                     tools:ignore="SpeakableTextPresentCheck" />
 
@@ -118,6 +111,7 @@
                     android:hint="@string/template"
                     android:inputType="text"
                     android:maxLength="20"
+                    android:textSize="18sp"
                     android:textColorHint="@color/black"
                     android:textStyle="bold|italic"
                     tools:ignore="SpeakableTextPresentCheck" />
@@ -144,6 +138,7 @@
                     android:hint="@string/color"
                     android:inputType="text"
                     android:maxLength="20"
+                    android:textSize="18sp"
                     android:textColorHint="@color/black"
                     android:textStyle="bold|italic"
                     tools:ignore="SpeakableTextPresentCheck" />
@@ -171,6 +166,7 @@
                     android:inputType="text"
                     android:maxLength="20"
                     android:textColorHint="@color/black"
+                    android:textSize="18sp"
                     android:textStyle="bold|italic"
                     tools:ignore="SpeakableTextPresentCheck" />
 
@@ -182,7 +178,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/inputViewDescrizione"
                 android:layout_centerHorizontal="true"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="15dp"
                 android:background="@drawable/border_button"
                 android:text="@string/save"
                 android:textColor="@color/white"
@@ -191,4 +187,4 @@
         </RelativeLayout>
     </ScrollView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
