--- a/app/src/main/res/layout/clothual_calendar.xml
+++ b/app/src/main/res/layout/clothual_calendar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginStart="16dp"
     android:layout_marginEnd="16dp"
@@ -22,6 +23,7 @@
             android:layout_height="150dp"
             android:layout_marginTop="20dp"
             android:layout_marginStart="10dp"
+            android:scaleType="centerCrop"
             app:layout_constraintStart_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
@@ -31,10 +33,11 @@
             android:id="@+id/dati"
             android:layout_width="160dp"
             android:layout_height="170dp"
-            android:layout_marginTop="10dp"
             android:orientation="vertical"
             app:layout_constraintStart_toEndOf="@id/imageViewAdapterClothual"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintEnd_toStartOf="@id/add"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
 
             <TextView
                 android:id="@+id/type"
@@ -86,10 +89,11 @@
             android:id="@+id/add"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            app:layout_constraintStart_toEndOf="@id/dati"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginEnd="10dp"
+            android:background="@color/backGroundAdapter"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:background="@color/backGroundAdapter"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </RelativeLayout>
